# fast-API

./: introduction -FastAPI.ipynb
fastapi/: README.md  pyproject.toml
fastapi/01_class/: main.py
learn_fastapi/: pyproject.toml
learn_fastapi/learn_fastapi/: main.py  settings.py
