[tool.poetry]
name = "fastapi_classes"
version = "0.1.0"
description = ""
authors = ["nihalraza369 <nihalraza369@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standerd"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
