[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["nihalraza369 <nihalraza369@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev="learn_fastapi.main:start"